# Ciencias-Financieras

./: README.md
Hawkes Enhanced RV Forecast/: README.md  pyproject.toml
Hawkes Enhanced RV Forecast/data/raw/: ADAUSDT_binance_5min_2017_2026_checkpoint.json  ETHUSDT_binance_5min_2017_2026_checkpoint.json
Hawkes Enhanced RV Forecast/hawkes_enhanced_rv_forecast.egg-info/: PKG-INFO  SOURCES.txt
Hawkes Enhanced RV Forecast/notebooks/: data_handling.ipynb  data_quality.ipynb  results_outcome.ipynb  run_rolling_window.ipynb  visualization_rolling_window.ipynb
Hawkes Enhanced RV Forecast/src/config/: paths.py
Hawkes Enhanced RV Forecast/src/data/: build_intraday_and_rv.py  migrate_feature_names.py
Hawkes Enhanced RV Forecast/src/evaluation/: eval_rolling_window.py
Hawkes Enhanced RV Forecast/src/features/: __init__.py  create_hawkes_feat.py  create_raw_event_feat.py  identify_events.py  tick_env_hawkes_fit.py
Hawkes Enhanced RV Forecast/src/models/: LSTM.py  __init__.py  base.py  har.py  types.py
LSTM-H for HAR residual modelling/: README.md  config.yaml  pyproject.toml
LSTM-H for HAR residual modelling/data/HAR/: BTC_HAR_dataset.parquet
LSTM-H for HAR residual modelling/data/LSTM/: BTC_LSTM_dataset.parquet
LSTM-H for HAR residual modelling/data/raw/: BTCUSDT_binance_5min_2017_2026_checkpoint.json
LSTM-H for HAR residual modelling/lstm_hawkes_residual_modelling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
LSTM-H for HAR residual modelling/notebooks/: data_pipeline.ipynb  plots.ipynb
LSTM-H for HAR residual modelling/src/config/: paths.py
(+80 files in other folders)
