[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hawkes-enhanced-rv-forecast"
version = "0.1.0"
description = "Extreme-event augmented realized volatility forecasting experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "pyarrow>=12.0",
  "torch>=2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
